--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -536,13 +536,11 @@ Overall, correlations between the IAS and external measures were not uniform but
 The present study provides a comprehensive evaluation of the IAS, examining both its structure (study 1) and its dispositional correlates (study 2). These studies offer novel insights into the psychometric characteristics, conceptual interpretation, and practical applications of the IAS. In this discussion, these findings are contextualized within the broader landscape of interoception research.
 
 <!-- Study 1 findings -->
-Study 1 demonstrated that the IAS is best conceptualised as comprising tightly coupled item pairs, reflecting discrete bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena. The pairs emerged after several items (e.g., Tickle, Taste, Affective Touch) were removed due to their instability, redundancy, or poor associations with the other items. The resulting 14-item IAS retained the psychometric integrity of the original scale while improving interpretability and efficiency.
+A short version of the IAS was previously proposed by @lin2023, who suggested a 12-item version by removing items with local dependency, high difficulty, and/or low discrimination. Their parallel analysis supported a unidimensional structure, although this method tends to underestimate factor numbers in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. Consequently, the 12-item IAS was interpreted as reflecting a single underlying factor of interoceptive accuracy. 
 
-A short version of the IAS has been proposed before.  @lin2023 suggested a 12-item version by removing items with local dependency, high difficulty, and/or low discrimination. Their parallel analysis suggested unidimensionality, although parallel analysis is known to underestimate factor numbers in multidimensional data [@golino2017exploratory; @markos2024dimensionality]. 
+In contrast, Study 1 applied multiple complementary methods, including EGA, FA, and HCA. Across datasets and methods, the same tightly coupled item pairs consistently emerged, representing distinct bodily domains such as visceral sensations, musculoskeletal cues, and expulsion phenomena. Several items (e.g., Tickle, Taste, Affective Touch) were removed due to instability, redundancy, or weak associations, resulting in a refined 14-item IAS that retained psychometric robustness while improving interpretability and efficiency.
 
-In contrast, our study applied multiple methods including EGA, FA, and HCA yet the same pairs consistently emerged across datasets and demonstrated superior fit compared to alternative models, which challenges the assumption of unidimensionality of the IAS [@murphy2019; @brand2023]. Although the short version of the IAS by  @lin2023 favoured a one-factor solution, their 12-item IAS was derived by removing locally dependent items identified through Item Response Theory (IRT). 
-
-We found that these locally dependent items can instead be interpreted as meaningful pairs (e.g., Heart–Breath), reflecting distinct bodily domains. Because IRT assumes unidimensionality [@nguyen2014introduction], it may have treated these natural item clusters as statistical artefacts rather than as theoretically relevant structures within interoceptive accuracy.
+These findings challenge the assumption of IAS unidimensionality [@murphy2019; @brand2023]. Whereas @lin2023 ’s IRT-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may reflect theoretically meaningful pairs (e.g., Heart–Breath). Because IRT assumes unidimensionality [@nguyen2014introduction], it may have obscured these structured item clusters rather than as theoretically relevant structures within interoceptive accuracy.
 
 <!-- Study 2 findings -->
 
@@ -550,13 +548,13 @@ We found that these locally dependent items can instead be interpreted as meanin
 - breathing - heart the most interoceptive items but less correlated (image figure 3?#)
 - Together, these results indicate that while the full IAS captures broad dispositional tendencies, its significant associations with external measures are frequently underpinned by a subset of item pairings, which appear more sensitive to specific interoceptive and affective domains. -->
 
-Study 2 provided further evidence for a domain-specific perspective. Certain item pairings, particularly Hunger-Thirst, Bruise-Blood sugar, and Muscles-Pain, showed consistent negative correlations with depression and anxiety measures, sometimes approaching or even surpassing the strength of associations observed for the full IAS scale. Notably, Hunger–Thirst and Bruise–Blood sugar were also the only pairs, out of the seven examined, that displayed significant positive correlations with the BPQ Body Awareness subscale, whereas the full IAS scale showed no such association.
+Study 2 provided further evidence for a domain-specific perspective. Certain item pairings, particularly Hunger-Thirst, Bruise-Blood sugar, and Muscles-Pain, showed consistent negative correlations with depression and anxiety measures, sometimes approaching or even surpassing the strength of associations observed for the full IAS scale. Notably, Hunger–Thirst and Bruise–Blood sugar were also the only pairs, out of the seven examined, that displayed significant positive correlations with the BPQ Body Awareness subscale, whereas the full IAS scale showed no such association. 
 
-Additionally, specific item pairings revealed distinct patterns of association with other interoceptive measures and mental health indices that were not captured by the full IAS. For instance, while the full IAS showed no significant associations with Borderline Personality, the Hunger-Thirst pair exhibited negative correlations. These findings collectively suggest that item-level analyses may uncover more nuanced relationships than those identified by the overall scale. This pattern highlights that questionnaires like the IAS may capture multiple facets of interoception rather than a single underlying dimension. Consequently, adopting a domain-specific approach could enhance construct validity by better reflecting the heterogeneity of interoceptive experiences.
+Additionally, specific item pairings revealed distinct patterns of association with other interoceptive measures and mental health indices that were not captured by the full IAS. For instance, while the full IAS showed no significant associations with Borderline Personality, the Hunger-Thirst pair exhibited negative correlations. These findings collectively suggest that item-level analyses may uncover more nuanced relationships than those identified by the overall scale. This pattern highlights that questionnaires like the IAS may capture multiple facets of interoception rather than a single underlying dimension. 
 
-These findings are in line with inconsistencies in the literature concerning associations between the IAS and the BPQ Body Awareness. While some studies report significant negative associations [@lin2023], others have observed significant positive associations  [@brand2023; @campos2021; @gaggero2021; @todd2022], and still others none at all  [@murphy2019]. In our study the full IAS was also not associated with the BPQ Body Awareness. 
+These findings are in line with inconsistencies found in the literature concerning associations between the IAS and the BPQ Body Awareness. While some studies report significant negative associations [@lin2023], others have observed significant positive associations  [@brand2023; @campos2021; @gaggero2021; @todd2022], and others none at all [@murphy2019]. In our study the full IAS was also not associated with the BPQ Body Awareness. This pattern is consistent with the idea that this subscale may capture maladaptive bodily experiences or autonomic dysfunction, rather than interoceptive accuracy per se. 
 
-This pattern is consistent with the idea that this subscale may capture maladaptive bodily experiences or autonomic dysfunction, rather than interoceptive accuracy per se. However, the Body Awareness subscale of the BPQ has also been criticized for its ambiguous instructions. It is often unclear whether respondents should interpret the items as assessing attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of experiencing such signals. As a result, studies have reported that observed associations vary depending on how the BPQ Body Awareness is interpreted [@campos2021; @gabriele2022dissociations; @gaggero2021]. As such, it is unclear whether the lack of a relationship between the IAS and the BPQ Body Awareness in this study reflects a genuine divergence between the constructs measured by the two scales, or instead arises from ambiguities in how the BPQ Body Awareness is operationalized and interpreted across studies.
+However, the Body Awareness subscale of the BPQ has also been criticized for its ambiguous instructions. It is often unclear whether respondents should interpret the items as assessing attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of experiencing such signals. As a result, studies have reported that observed associations vary depending on how the BPQ Body Awareness is interpreted [@campos2021; @gabriele2022dissociations; @gaggero2021]. As such, it is unclear whether the lack of a relationship between the IAS and the BPQ Body Awareness in this study reflects a genuine divergence between the constructs measured by the two scales, or instead arises from ambiguities in how the BPQ Body Awareness is operationalized and interpreted across studies.
 
 We highlight that some IAS pairings may capture interoceptive self-reported accuracy more effectively than the full IAS measure, raising questions about the interpretability of the full scale. In contrast , other pairings (e.g., Cough–Sneeze, Wind–Burp) were weakly or inconsistently related to other variables, raising concerns about their usefulness. Together, these findings indicate that the strength and relevance of interoceptive self-reported accuracy may vary systematically across physiological domains. 
 
@@ -573,17 +571,17 @@ Recent evidence supports the view that relationships between interoceptive measu
 
 A potential key reason for discrepancies in observed associations, including those seen with the IAS, is that self-report questionnaires in interoception often tap into distinct constructs rather than a common underlying dimension [@desmedt2022measures]. Measures labeled as interoceptive sensibility, awareness, or self-reported accuracy capture partially overlapping but empirically distinct facets, with low intercorrelations between questionnaires and items. Consequently, differences in associations with psychological outcomes or personality traits may reflect differences in what each questionnaire assesses rather than true variation in interoceptive functioning.
 
-<!-- IAS limitations and potential improvements -->
-These two studies revealed three main points. First,  in the datasets that included analogue-style ratings, these scales captured greater variability, further enhancing the ability to detect individual differences. Second, a shortened, 14-item version of the IAS retained strong psychometric integrity while removing unstable or redundant items. Third, specific item pairings allowed more precise differentiation among individuals and often outperformed global scores in predictive value. Nevertheless, even this refined IAS has important limitations. 
-
-While the 14-item version improves interpretability and efficiency, it continues to underrepresent key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes. This shortcoming underscores the need for broader coverage in future scale development. At the same time, analogue-style items and item pairings offer clear advantages: they increase response variability, allow more precise differentiation among individuals, and provide domain-specific indicators that often outperform global scores. 
-
-Building on these insights, a next-generation interoception scale could balance breadth (multiple items per modality) with depth (domain-specific subscales), retain the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimize coverage across physiologically and psychologically relevant bodily domains. Such a scale would improve interpretability, sensitivity, and practical utility, ultimately enabling a more nuanced mapping of interoceptive abilities onto affective, cognitive, and health-related outcomes.
-
 <!-- Limitations -->
 One limitation worth noting is that we did not evaluate the IAS alongside other widely used questionnaires, such as the BPQ or MAIA. Although both are frequently employed in interoception research, they present important limitations. For example, the MAIA-2 contains subscales (e.g., Not-Worrying, Not-Distracting) with weak reliability and minimal relation to a general interoception factor [@ferentzi2021examining; @rogowska2023validation]. Several other subscales primarily reflect higher-level cognitive tendencies, such as mindfulness and attentional regulation, rather than interoceptive body awareness [@todd2022; @vig2023self]. Similarly, the BPQ’s Body Awareness and Autonomic Reactivity subscales show conceptual and psychometric concerns, and BPQ scores often overlap substantially with negative affect, raising questions about their specificity as measures of interoceptive sensibility [@campos2021; @gabriele2022dissociations; @vig2023self]. 
 
 Because the IAS is a newly developed questionnaire and the only one designed to assess interoceptive self-reported accuracy - a dimension previously assessed solely through objective tasks such as the HDT and HCT - our focus was on evaluating its structure and correlates without introducing established measures with documented shortcomings. Nonetheless, future research should employ novel methods, such as Exploratory Graph Analysis, to clarify the convergent and divergent validity of these questionnaires across interoceptive domains.
+
+<!-- IAS limitations and potential improvements -->
+Nevertheless, these two studies revealed three main points. First,  in the datasets that included analogue-style ratings, these scales captured greater variability, further enhancing the ability to detect individual differences. Second, a shortened, 14-item version of the IAS retained strong psychometric integrity while removing unstable or redundant items. Third, specific item pairings allowed more precise differentiation among individuals and often outperformed global scores in predictive value. Nevertheless, even this refined IAS has important limitations. 
+
+While the 14-item version improves interpretability and efficiency, it continues to underrepresent key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes. This shortcoming underscores the need for broader coverage in future scale development. At the same time, analogue-style items and item pairings offer clear advantages: they increase response variability, allow more precise differentiation among individuals, and provide domain-specific indicators that often outperform global scores. 
+
+Building on these insights, a next-generation interoception scale could balance breadth (multiple items per modality) with depth (domain-specific subscales), retain the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimize coverage across physiologically and psychologically relevant bodily domains. Such a scale would improve interpretability, sensitivity, and practical utility, ultimately enabling a more nuanced mapping of interoceptive abilities onto affective, cognitive, and health-related outcomes.
 
 <!-- Conclusion -->
 Taken together, these studies advance understanding of the IAS and interoceptive self-report more broadly. The refined 14-item IAS provides a more efficient and interpretable measure, capturing domain-specific interoceptive signals that show differential associations with psychological outcomes. Associations were consistently stronger with mood measures and compared to personality and beliefs, indicating that self-reported interoceptive accuracy relates more closely to affective experience than to stable dispositional traits. 
