results section re-written

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -177,7 +177,6 @@ For instance, existing findings typically show weak or no correlations between q
 Additionally, even various objective measures assessing in theory the same interoceptive dimension, such as accuracy, either show no or weak correlation [respectively, @brand2023; @hickman2020relationship].
 Perhaps more surprisingly, low correlations have been observed even among questionnaires, suggesting (in parallel to major validity concerns) the potential targeting of different facets related to interoception.
 
-
 One striking example concerns the assessment of interoceptive sensibility, which is broadly defined as the self-reported tendency to focus on and detect internal sensations [@garfinkel2015knowing], but more narrowly as the subjective tendency to focus on interoceptive signals, without necessarily implying detection ability [@khalsa2018interoception].
 A recent systematic review suggested that various questionnaires designed to assess interoceptive sensibility may, in fact, measure distinct constructs, with the risk of researchers treating them as equivalent despite overall low convergence [@desmedt2022measures].
 Notably, this review adopted a broad definition of sensibility, incorporating both interoceptive sensibility and interoceptive self-report scales, following the eight-facet model by @khalsa2018interoception. 
@@ -202,8 +201,6 @@ Using a 2-factors Exploratory Factor Analysis (EFA), @koike2023 suggested that t
 Discussions have also been focused on specific items.
 For instance, @murphy2019 notes that some items might measure direct interoceptive signals such as cardioception, while others might capture phenomena not perceivable through interoceptive signals alone (e.g., "bruising"; p. 119). 
 @lin2023 additionally highlights five locally dependent pairs and three items (touch, blood sugar, bruise) with exceptionally high difficulty and low discrimination, and @campos2021 reported "tickle" to be the only item that reflected more specific factors than the general factor. Furthermore, localization issues also arose, with both "itch" and "tickle" corresponding to the same Chinese character, leading to their collapse into a single item [@lin2023]. 
-
-
 
 <!-- Relationship with other interoception measures -->
 Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional; @gaggero2021], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining].
@@ -393,7 +390,7 @@ Study 1 aimed to systematically evaluate the structure of the IAS. Previous rese
 Analyses revealed that seven item pairs (e.g., Hunger–Thirst, Urinate–Defecate, Cough–Sneeze) provided a robust and replicable structure, leading to a refined 14-item IAS. These pairs consistently emerged across datasets and yielded superior fit indices compared to alternative models. This suggests that the IAS does not measure a broad latent construct of interoceptive accuracy but reflects clusters of tightly coupled items tied to specific bodily sensations.
 
 <!-- Implications for scale interpretation -->
-The presence of redundant or unstable items (e.g., Tickle, Taste, Affective Touch) undermines interpretability and likely explains inconsistencies in prior factor-analytic findings [@campos2021; @lin2023]. Nevertheless, the structured item pairs correspond to intuitive bodily domains—visceral, expulsion, musculoskeletal—supporting ecological validity. These findings highlight the need for targeted scale refinement and motivate future development of context-sensitive, multidimensional interoception measures.
+The presence of redundant or unstable items (e.g., Tickle, Taste, Affective Touch) undermines interpretability and likely explains inconsistencies in prior factor-analytic findings [@campos2021; @lin2023]. Nevertheless, the structured item pairs correspond to intuitive bodily domains - visceral, expulsion, musculoskeletal - supporting ecological validity. These findings highlight the need for targeted scale refinement and motivate future development of context-sensitive, multidimensional interoception measures.
 
 <!-- Summary -->
 In summary, study 1 suggests that once problematic items are removed, the IAS is best conceptualized as a set of item clusters rather than a unidimensional scale. This structural insight provides the foundation for Study 2, where dispositional correlates are examined to further evaluate the IAS's construct validity.
@@ -478,32 +475,38 @@ From each fitted model, we will extract standardized regression coefficients (β
 ## Results
 
 <!-- Demographic correlates -->
-Age was positively associated across Ias correlates (mean r = .13), with all correlations significant. Gender showed near-zero effects (mean r = −.06), reaching significance only with the Hungry-Thirsty, Wind-Burp and Urinate-Defecate pairings.
+
+Age showed consistent positive standardized associations across IAS correlates (mean β = .13), with all effects significant. Gender displayed near-zero effects (mean β = −.06), significant only for the Hungry–Thirsty, Wind–Burp, and Urinate–Defecate pairings.
 
 <!-- Interoceptive measures -->
-Several MAIA subscales showed consistent positive associations with the IAS: Noticing, Body Listening, Attention Regulation, Trusting, Emotional Awareness, and Self-Regulation (mean r ≈ .18–.26), with effects generally stronger for the full IAS, with the exception of the Body Listenig dimension whose associations were stronger with the Bruise-Blood pairing. The Not Distracting subscale was significantly associated with the whole scale and with three of the seven pairs, namely Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain (mean r ≈ .19–.13). By contrast, the Not Worrying subscale was only significant for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (mean r ≈ −.009–.108).
 
-Autonomic Reactivity (BPQ; mean r = −.19) was reliably negative across most pairings, while Body Awareness (BPQ; mean r = .12) was weak and only reliable for Bruise-Blood.
+MAIA subscales showed robust positive standardized effects with the IAS. Noticing yielded the strongest association (mean β = .26), followed by Emotional Awareness (β = .20) and related subscales—Body Listening, Attention Regulation, Trusting, and Self-Regulation—each in the .20–.26 range, all significant. Effects were generally strongest for the full IAS, except for Body Listening, which peaked for the Bruise–Blood pairing. Not Distracting was weakly but significantly positive (mean β = .06), primarily for Hungry–Thirsty, Bruise–Blood, and Muscles–Pain. Not Worrying was significant only for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (β ≈ −.01 to .11).
 
-In terms of interoceptive deficits, alexithymia measures were consistently negative, with robust effects across both the full IAS and pairings, except for the Affective dimension of the BVAQ, which showed a positive association only with the Bruise–Blood sugar pairing (r = .16). Interoceptive confusion assessed with the ICQ was also consistently negatively associated with all pairings and the full IAS (mean r ≈ −.49–.20).
+Autonomic Reactivity (BPQ; mean β = −.19) was reliably negative across pairings, reaching significance for all except the Bruise–Blood sugar and Breathing–Heart pairings. In contrast, Body Awareness (BPQ; mean β = .12) was weakly positive and significant only for Bruise–Blood.
+
+Interoceptive deficits showed consistent negative standardized effects. Alexithymia measures (TAS, BVAQ) were robustly negative (β ≈ −.18 to −.24), except for the BVAQ Affective subscale, which was positive for Bruise–Blood (β = .16). Interoceptive confusion (ICQ) was also strongly negative across all IAS measures (mean β ≈ −.42; range = −.49 to −.20).
 
 <!-- Mood and psychopathology -->
-Depression (BDI; mean r = −.20) and anxiety (STAI-T; mean r = −.19) were consistently negative across the IAS and most pairings, with Hungry–Thirsty again emerging as a particularly sensitive correlate. Notably, different measures indexing similar constructs showed distinct association patterns: the MFQ was largely nonsignificant despite measuring depressive symptoms comparable to for instance the BDI. Similarly, PHQ-9 followed a weaker and less reliable pattern. Related symptom measures (PHQ-15, PHQ-4, GAD-7) showed weaker but often reliable effects, although some were restricted to specific pairings (e.g., PHQ-15 not significant with Wind–Burp and Breathing–Heart). Notably, most of the mood measures (PHQ-9, BDI, PHQ-4, STAI-T, GAD-7) displayed stronger associations with the Hungry-Thristy pairing than the full IAS.
+
+Depression (BDI; mean β = −.20) and anxiety (STAI-T; mean β = −.19) showed consistent negative associations across the IAS and pairings, strongest for Hungry–Thirsty. Related constructs diverged somewhat: MFQ was largely nonsignificant; PHQ-9 and other mood indices (PHQ-15, PHQ-4, GAD-7) produced weaker but often reliable negative βs (typically −.10 to −.15), with effects sometimes limited to particular pairings (e.g., PHQ-15 nonsignificant for Wind–Burp and Breathing–Heart). Hungry–Thirsty consistently yielded the strongest standardized effects.
 
 <!-- Psychopathologies -->
-Autistic traits were generally negatively associated with the IAS, with Imagination (mean r = −.18) showing the most consistent effects across pairings, except for Cough–Sneeze. Across subscales, most associations observed for the full IAS were primarily driven by the first three pairings—Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain— which showed the strongest and most reliable negative correlations. Beyond these, effects tended to weaken and often became nonsignificant, particularly for Patterns and Numbers, which did not correlate with any IAS correlate, while Borderline Personality only correlated with the Hungry–Thirsty pairing (mean r = −.14).
 
-Schizotypal traits were generally negatively associated with the IAS, with Social Anxiety (mean r = −.11) and No Close Friends (mean r = −.12) showing the most consistent negative effects across pairings. Notably, although some facets did not show consistent associations with the overall IAS, they were significantly related to specific pairings. For example, Unusual Perceptions was associated with the Muscles–Pain and Urinate–Defecate pairings, whereas Eccentric was associated with the Hungry–Thirsty and Urinate–Defecate pairings.
+Autistic traits were generally negatively associated with IAS scores. Imagination (mean β = −.18) showed the most consistent pattern across pairings except Cough–Sneeze. Most full-IAS associations were driven by Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain, which yielded the largest negative coefficients. Beyond these, effects weakened or became nonsignificant- Patterns and Numbers showed none, and Borderline Personality was associated only with Hungry–Thirsty (mean β = −.14).
+
+Schizotypal traits showed similarly negative coefficients, with Social Anxiety (mean β = −.11) and No Close Friends (mean β = −.12) most consistent. Some facets were unrelated to the overall IAS but linked to specific pairings: Unusual Perceptions with Muscles–Pain and Urinate–Defecate, and Eccentric with Hungry–Thirsty and Urinate–Defecate.
 
 <!-- Personality and beliefs -->
-Within the Big Five, Openness (mean r = .14), Agreeableness (mean r = .05), and Conscientiousness (mean r = .03) showed small but consistent positive associations, most reliably captured by the full IAS but also evident in pairings. Honesty–Humility showed a unique negative association with the full IAS scale, largely driven by the Hunger–Thirst and Bruise–Blood sugar item pairings. Similarly, Neuroticism was negatively associated with the full IAS, but this relationship was primarily attributable to the Hunger–Thirst and Wind–Burp pairings, with the strongest correlation observed for Hunger–Thirst (r = −.23).
 
-Primal world beliefs measures were largely null, but certain beliefs showed small yet consistent associations with specific IAS item pairings. Belief in a comprehensible world (“Understandable”) correlated positively with most pairings except Urinate–Defecate and Cough–Sneeze, while beliefs that the world is “Alive” and “Hierarchical” were associated with the full IAS and Hunger–Thirsty, and “Good” was uniquely linked to Muscles–Pain (mean r = .09). For the Lying Profile, only Lying Contextuality showed a notable negative association with the Bruise–Blood sugar pairing (r = −.12).
+Among Big Five traits, Openness (mean β = .10), Agreeableness (β = .08), and Conscientiousness (β = .11) showed small but consistent positive effects, most evident for the full IAS. Honesty–Humility (mean β = −.10) showed a small negative effect, primarily for Hungry–Thirsty and Bruise–Blood sugar. Neuroticism (mean β = −.13) was negatively associated with the IAS, with the strongest β for Bruise–Blood (β = −.23).
 
-Conspiracy Beliefs showed selective associations, with Global Conspiracies linked to the full IAS and several pairings (Original, Hunger–Thirsty, Cough–Sneeze, Urinate–Defecate; mean r = .103), Personal Wellbeing to the full IAS and Hunger–Thirsty (mean r = .086), and Information Control to Cough–Sneeze (mean r =  .06). 
+Primal world beliefs were largely null, with small positive standardized coefficients for certain beliefs: “Understandable,” “Alive,” and “Hierarchical” were weakly positive for the full IAS and Hungry–Thirsty (β ≈ .05–.10), while “Good” was uniquely positive for Muscles–Pain (β ≈ .09). Within the Lying Profile, only Lying Contextuality showed a modest negative coefficient for Bruise–Blood (β = −.12).
+
+Conspiracy Beliefs produced selective small positive effects. Global Conspiracies (GCBS) were associated with the full IAS and several pairings (mean β = .10), Government Malfeasance (β = .05) with Cough–Sneeze, and Extraterrestrial beliefs (β = .03) with Muscles–Pain.
 
 <!-- Differences between the full IAS and item pairings -->
-Overall, the full IAS yielded the largest number of significant associations (29), but these were often driven by specific item pairings rather than reflecting uniform effects across the scale. The Hungry–Thirsty (17) and Bruise–Blood sugar (10) pairings consistently produced equally strong or stronger effects, particularly for interoceptive, mood, and psychopathology measures. In contrast, other pairings (e.g., Cough–Sneeze, Wind–Burp, Urinate–Defecate) contributed little unique variance and rarely produced meaningful associations.
+
+Overall, the full IAS produced the greatest number of significant standardized effects (29), though many were driven by specific pairings rather than uniform scale-wide associations. Hungry–Thirsty (17) and Bruise–Blood sugar (10) consistently yielded the strongest standardized coefficients, especially for interoceptive, mood, and psychopathology measures. Other pairings (Cough–Sneeze, Wind–Burp, Urinate–Defecate) contributed little unique variance and rarely yielded meaningful standardized effects.
 
 ## Discussion
 
